--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,19 +29,24 @@ jobs:
         # flutter-version: '1.12.x' # you can also specify exact version of flutter
     
     # Get flutter dependencies.
-    - run: flutter pub get
+    - name: Install dependencies
+      run: flutter pub get
     
     # Check for any formatting issues in the code.
-    - run: flutter format --set-exit-if-changed .
+    - name: Checking formatting issues
+      run: flutter format --set-exit-if-changed .
     
     # Statically analyze the Dart code for any errors.
-    - run: flutter analyze .
+    - name: Analyze project source
+      run: flutter analyze .
     
     # Run widget tests for our flutter project.
-    - run: flutter test
+    - name: Run tests
+      run: flutter test
     
     # Build apk.
-    - run: flutter build apk
+    - name: Build application
+      run: flutter build apk
     
     # Upload generated apk to the artifacts.
     - uses: actions/upload-artifact@v1
