--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -25,8 +25,8 @@ jobs:
     - name: Install dependencies
       run: flutter pub get
 
-    - name: Run Flutter analyzer
-      run: flutter analyze
+    # - name: Run Flutter analyzer
+    #   run: flutter analyze
 
     - name: Run tests
       run: flutter test
