--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -28,8 +28,8 @@ jobs:
     # - name: Run Flutter analyzer
     #   run: flutter analyze
 
-    - name: Run tests
-      run: flutter test
+    # - name: Run tests
+    #   run: flutter test
 
     - name: Build Android APK
       run: flutter build apk --release
