workflow: fixed release code for both workflows

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,6 +9,8 @@ jobs:
   build:
     name: Publish binaries
     runs-on: ubuntu-latest
+    permissions:
+      contents: write # Required to create/modify releases
 
     steps:
       - uses: actions/checkout@v3
