--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -2,47 +2,51 @@ name: Flutter Android CI/CD
 
 on:
   push:
-    branches: [ master ]  # Only triggers on master branch
+    branches: [master] # Only triggers on master branch
 
 env:
-  FLUTTER_VERSION: "3.29.3"  # Update to latest stable version
+  FLUTTER_VERSION: "3.29.3" # Update to latest stable version
 
 jobs:
   build-android:
     name: Build Android Release
     runs-on: ubuntu-latest
+    permissions:
+      contents: write # Required to create/modify releases
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Set up Flutter
-      uses: subosito/flutter-action@v2
-      with:
-        flutter-version: ${{ env.FLUTTER_VERSION }}
-        channel: 'stable'
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: ${{ env.FLUTTER_VERSION }}
+          channel: "stable"
 
-    - name: Install dependencies
-      run: flutter pub get
+      - name: Install dependencies
+        run: flutter pub get
 
-    # - name: Run Flutter analyzer
-    #   run: flutter analyze
+      # - name: Run Flutter analyzer
+      #   run: flutter analyze
 
-    # - name: Run tests
-    #   run: flutter test
+      # - name: Run tests
+      #   run: flutter test
 
-    - name: Build Android APK
-      run: flutter build apk --release
-      
-    - name: Upload APK artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: app-release
-        path: build/app/outputs/flutter-apk/app-release.apk
-    - name: Upload Release Asset
-      uses: softprops/action-gh-release@v1
-      if: startsWith(github.ref, 'refs/tags/')
-      with:
-        files: build/app/outputs/flutter-apk/app-release.apk
-        # Optional: Add release notes from a file
-        body_path: CHANGELOG.md
+      - name: Build Android APK
+        run: flutter build apk --release
+
+      - name: Upload APK artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-release
+          path: build/app/outputs/flutter-apk/app-release.apk
+      - name: Upload Release Asset
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: build/app/outputs/flutter-apk/app-release.apk
+          asset_name: adamantium_player.apk # Added .apk extension
+          tag: ${{ github.ref_name }} # Changed to ref_name
+          overwrite: true
+          body: "Adamantium Player New Release"
